k8s/overlays/dev/patch-image.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: resume
spec:
  template:
    spec:
      containers:
        - name: resume
          image: ecalcutin/kalkutin.dev:latest
