k8s/overlays/dev/patch-replicas.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: resume
  namespace: applications
spec:
  replicas: 1
