k8s/overlays/dev/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: resume-ingress
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
    nginx.ingress.kubernetes.io/ssl-redirect: 'true'
    nginx.ingress.kubernetes.io/backend-protocol: 'HTTP'
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - resume.kalkutin.dev
      secretName: resume-tls-secret
  rules:
    - host: resume.kalkutin.dev
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: resume-service
                port:
                  number: 80
